--- a/shard.yml
+++ b/shard.yml
@@ -1,12 +1,12 @@
-name: case_class
+name: dataclass
 version: 0.0.1
 
 authors:
   - lbarasti
 
 description: |
-  Case class macros for the Crystal Language.
+  Data class macros for the Crystal Language.
 
-crystal: 0.24.1
+crystal: 0.31.1
 
 license: MIT
