--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: dataclass
-version: 1.1.0
+version: 1.1.1
 
 authors:
   - lbarasti
@@ -7,6 +7,6 @@ authors:
 description: |
   Data class macros for the Crystal Language.
 
-crystal: 0.32.1
+crystal: ">= 0.32.1"
 
 license: MIT
